--- a/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
@@ -29,7 +29,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+        pip install deployment/mlflowdepl-0.1.0-py3-none-any.whl
     - name: Test with pytest
       run: |
         pip install pytest
@@ -41,4 +41,4 @@ jobs:
 
     - name: Deploy artifact
       run: |
-        python deployment/release_cicd_pipeline.py
+        python -c "from mlflowdepl import release_cicd_pipeline; release_cicd_pipeline.main('integration-tests', 'pipelines', True);"
