--- a/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
+++ b/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
@@ -41,8 +41,11 @@ stages:
     - script: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
+        PROJECT_RELATIVE_PATH="${PROJECT_RELATIVE_PATH:-.}"
+        pip install "$PROJECT_RELATIVE_PATH/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
       displayName: 'Install Python Dependencies'
+      env:
+        PROJECT_RELATIVE_PATH: $(PROJECT_RELATIVE_PATH)
 
     - script: |
         pip install pytest
@@ -101,8 +104,11 @@ stages:
       - script: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
+          PROJECT_RELATIVE_PATH="${PROJECT_RELATIVE_PATH:-.}"
+          pip install "$PROJECT_RELATIVE_PATH/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
         displayName: 'Install Python Dependencies'
+        env:
+          PROJECT_RELATIVE_PATH: $(PROJECT_RELATIVE_PATH)
 
       - script: |
           pip install pytest
