Fix missing double-quote.

--- a/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
+++ b/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
@@ -42,7 +42,7 @@ stages:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         PROJECT_RELATIVE_PATH="${PROJECT_RELATIVE_PATH:-.}"
-        pip install "$PROJECT_RELATIVE_PATH/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
+        pip install "$PROJECT_RELATIVE_PATH"/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
       displayName: 'Install Python Dependencies'
       env:
         PROJECT_RELATIVE_PATH: $(PROJECT_RELATIVE_PATH)
@@ -105,7 +105,7 @@ stages:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           PROJECT_RELATIVE_PATH="${PROJECT_RELATIVE_PATH:-.}"
-          pip install "$PROJECT_RELATIVE_PATH/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
+          pip install "$PROJECT_RELATIVE_PATH"/deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
         displayName: 'Install Python Dependencies'
         env:
           PROJECT_RELATIVE_PATH: $(PROJECT_RELATIVE_PATH)
