--- a/az_dev_ops/azure-pipelines.yml
+++ b/az_dev_ops/azure-pipelines.yml
@@ -65,8 +65,8 @@ stages:
 
         python -c "from databrickslabs_cicdtemplates import dev_cicd_pipeline; dev_cicd_pipeline.main('dev-tests');"
       env:
-        DATABRICKS_HOST: $(DATABRICKS_STAGING_HOST)
-        DATABRICKS_TOKEN: $(DATABRICKS_STAGING_TOKEN)
+        DATABRICKS_HOST: $(DATABRICKS_HOST)
+        DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
         MLFLOW_TRACKING_URI: $(MLFLOW_TRACKING_URI)
         CURRENT_CLOUD: $(CURRENT_CLOUD)
       displayName: 'Deploy artifact'
@@ -115,8 +115,8 @@ stages:
 
       - task: riserrad.azdo-databricks.azdo-databricks-configuredatabricks.configuredatabricks@0
         inputs:
-          url: '$(DATABRICKS_STAGING_HOST)'
-          token: '$(DATABRICKS_STAGING_TOKEN)'
+          url: '$(DATABRICKS_HOST)'
+          token: '$(DATABRICKS_TOKEN)'
         displayName: 'Configure Databricks CLI for AZDO'
 
       - script: |
@@ -125,8 +125,8 @@ stages:
 
           python -c "from databrickslabs_cicdtemplates import release_cicd_pipeline; release_cicd_pipeline.main('integration-tests', 'pipelines', True);"
         env:
-          DATABRICKS_HOST: $(DATABRICKS_STAGING_HOST)
-          DATABRICKS_TOKEN: $(DATABRICKS_STAGING_TOKEN)
+          DATABRICKS_HOST: $(DATABRICKS_HOST)
+          DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
           MLFLOW_TRACKING_URI: $(MLFLOW_TRACKING_URI)
           CURRENT_CLOUD: $(CURRENT_CLOUD)
         displayName: 'Deploy artifact'
