--- a/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
+++ b/{{cookiecutter.project_slug}}/az_dev_ops/azure-pipelines.yml
@@ -60,20 +60,16 @@ stages:
       displayName: 'Configure Databricks CLI for AZDO'
 
     - script: |
-        # Prevent the "RestException: RESOURCE_DOES_NOT_EXIST: Parent directory /Users/$(Username)/experiments does not exist" Error first time.
-        databricks workspace mkdirs /Users/$(DATABRICKS_USERNAME)/experiments --profile AZDO
-
         python -c "from databrickslabs_cicdtemplates import dev_cicd_pipeline; dev_cicd_pipeline.main('dev-tests');"
       env:
-        DATABRICKS_HOST: $(DATABRICKS_STAGING_HOST)
-        DATABRICKS_TOKEN: $(DATABRICKS_STAGING_TOKEN)
+        DATABRICKS_HOST: $(DATABRICKS_HOST)
+        DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
         MLFLOW_TRACKING_URI: $(MLFLOW_TRACKING_URI)
         CURRENT_CLOUD: $(CURRENT_CLOUD)
       displayName: 'Deploy artifact'
 
 
 - stage: onRelease
-  dependsOn: [onPush]
   condition: |
     or(
       startsWith(variables['Build.SourceBranch'], 'refs/heads/releases'),
@@ -113,20 +109,11 @@ stages:
           python setup.py bdist_wheel
         displayName: 'Build artifact'
 
-      - task: riserrad.azdo-databricks.azdo-databricks-configuredatabricks.configuredatabricks@0
-        inputs:
-          url: '$(DATABRICKS_STAGING_HOST)'
-          token: '$(DATABRICKS_STAGING_TOKEN)'
-        displayName: 'Configure Databricks CLI for AZDO'
-
       - script: |
-          # Prevent the "RestException: RESOURCE_DOES_NOT_EXIST: Parent directory /Users/$(Username)/experiments does not exist" Error first time.
-          databricks workspace mkdirs /Users/$(DATABRICKS_USERNAME)/experiments --profile AZDO
-
           python -c "from databrickslabs_cicdtemplates import release_cicd_pipeline; release_cicd_pipeline.main('integration-tests', 'pipelines', True);"
         env:
-          DATABRICKS_HOST: $(DATABRICKS_STAGING_HOST)
-          DATABRICKS_TOKEN: $(DATABRICKS_STAGING_TOKEN)
+          DATABRICKS_HOST: $(DATABRICKS_HOST)
+          DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
           MLFLOW_TRACKING_URI: $(MLFLOW_TRACKING_URI)
           CURRENT_CLOUD: $(CURRENT_CLOUD)
         displayName: 'Deploy artifact'
