--- a/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
@@ -1,44 +1,68 @@
-name: Python package
+name: Project pipeline
 
-on:
-  release:
-    types:
-      - created
+on: [ push ]
 
 jobs:
-  build:
+  project-pipeline:
+
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7]
+        python-version: [ 3.7 ]
 
     env:
-      MLFLOW_TRACKING_URI: 'databricks'
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
       DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
 
     steps:
-    - uses: actions/checkout@v1
-      
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install deployment/databrickslabs_cicdtemplates-0.2.3-py3-none-any.whl
-    - name: Test with pytest
-      run: |
-        pip install pytest
-        python -m pytest
-       
-    - name: Build artifact
-      run: |
-        python setup.py bdist_wheel
+      - uses: actions/checkout@v1
 
-    - name: Deploy artifact
-      run: |
-        python -c "from databrickslabs_cicdtemplates import release_cicd_pipeline; release_cicd_pipeline.main('integration-tests', 'pipelines', True);"
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v1
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - uses: actions/cache@v2
+        id: cache
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+            ${{ runner.os }}-pip-
+
+      - name: Install pip
+        run: |
+          python -m pip install --upgrade pip
+
+      - name: Install dependencies
+        run: |
+          pip install dbx
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          echo "Launching tests"
+          pytest
+
+      - name: Prepare profile
+        run: |
+          echo "[profile-name]" >> ~/.databrickscfg
+          echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
+          echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
+
+      - name: Build artifact
+        run: |
+          python setup.py bdist_wheel
+
+      - name: Perform deployment on test
+        run: |
+          dbx deploy --environment=test
+
+      - name: Launch job on live
+        run: |
+          dbx launch --environment=live --job=sample
+
+
+
