--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 setuptools
 wheel
-mlflow==1.8.0
-pytest==5.3.1
-python-dotenv==0.10.3
-databricks-cli==0.10.0
-pyyaml>=5.1
+cookiecutter
+pathlib
+
