add proper structure

--- a/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
@@ -1,9 +1,12 @@
 name: Release pipeline
 
-on: [ push ]
+on:
+  release:
+    types:
+      - created
 
 jobs:
-  project-pipeline:
+  release-pipeline:
 
     runs-on: ubuntu-latest
     strategy:
