--- a/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
@@ -1,9 +1,9 @@
-name: Testing pipeline
+name: Test pipeline
 
 on: [ push ]
 
 jobs:
-  project-pipeline:
+  test-pipeline:
 
     runs-on: ubuntu-latest
     strategy:
