--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -36,6 +36,11 @@ jobs:
       run: |
         pip install -r requirements.txt
 
+    - name: Install dbx and test
+      run: |
+        pip install {{cookiecutter.project_slug}}/tools/dbx-0.5.0-py3-none-any.whl
+        dbx --version
+
     - name: Run tests
       run: |
         echo "Launching tests"
