--- a/{{cookiecutter.project_slug}}/azure-pipelines.yml
+++ b/{{cookiecutter.project_slug}}/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
 
     - script: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r unit-requirements.txt
         pip install tools/dbx-0.5.0-py3-none-any.whl
         pip install -e .
       displayName: 'Install dependencies'
@@ -94,7 +94,7 @@ stages:
 
       - script: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r unit-requirements.txt
           pip install tools/dbx-0.5.0-py3-none-any.whl
           pip install -e .
         displayName: 'Install Python Dependencies'
