--- a/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
@@ -30,7 +30,7 @@ jobs:
           path: ~/.cache/pip
           key: ${{ runner.os }}-pip-${{ hashFiles('**/unit-requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+            ${{ runner.os }}-pip-${{ hashFiles('**/unit-requirements.txt') }}
             ${{ runner.os }}-pip-
 
       - name: Install pip
@@ -39,7 +39,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install -r requirements.txt
+          pip install -r unit-requirements.txt
           pip install tools/dbx-0.5.0-py3-none-any.whl
           pip install -e .
 
