--- a/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onrelease.yml
@@ -17,7 +17,6 @@ jobs:
     env:
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
       DATABRICKS_TOKEN: ${{ secrets.DATABRICKS_TOKEN }}
-      PROFILE_NAME: "some-profile"
 
     steps:
       - uses: actions/checkout@v1
@@ -47,7 +46,7 @@ jobs:
 
       - name: Prepare profile
         run: |
-          echo "[$PROFILE_NAME]" >> ~/.databrickscfg
+          echo "[DEFAULT]" >> ~/.databrickscfg
           echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
           echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
 
@@ -57,10 +56,10 @@ jobs:
 
       - name: Perform deployment
         run: |
-          dbx deploy --environment=test
+          dbx deploy --environment={environment}
 
       - name: Launch job
         run: |
-          dbx launch --environment=test --job={project_name}-sample
+          dbx launch --environment={environment} --job={project_name}-sample
 
 
