--- a/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/onpush.yml
@@ -8,8 +8,6 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      matrix:
-        python-version: [ 3.7 ]
 
     env:
       DATABRICKS_HOST: ${{ secrets.DATABRICKS_HOST }}
@@ -18,10 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v1
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.7
 
       - uses: actions/cache@v2
         id: cache
@@ -39,7 +37,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install -r unit-requirements.txt
-          pip install tools/dbx-0.5.0-py3-none-any.whl
+          pip install tools/dbx-0.7.0-py3-none-any.whl
           pip install -e .
 
       - name: Run unit tests
