indentation fix in azure-pipelines.yml

--- a/{{cookiecutter.project_slug}}/azure-pipelines.yml
+++ b/{{cookiecutter.project_slug}}/azure-pipelines.yml
@@ -55,7 +55,7 @@ stages:
       displayName: 'Deploy integration test'
 
     - script: |
-        dbx launch --jobs={{cookiecutter.project_slug}}-sample-integration-test --trace
+        dbx launch --job={{cookiecutter.project_slug}}-sample-integration-test --trace
       displayName: 'Launch integration on test'
 
 - stage: onRelease
@@ -83,34 +83,34 @@ stages:
         clean: true
         displayName: 'Checkout & Build.Reason: $(Build.Reason) & Build.SourceBranchName: $(Build.SourceBranchName)'
 
-    - script: |
-        python -m pip install --upgrade pip
-        pip install -r unit-requirements.txt
-        pip install tools/dbx-0.7.0-py3-none-any.whl
-        pip install -e .
-      displayName: 'Install dependencies'
+      - script: |
+          python -m pip install --upgrade pip
+          pip install -r unit-requirements.txt
+          pip install tools/dbx-0.7.0-py3-none-any.whl
+          pip install -e .
+        displayName: 'Install dependencies'
 
-    - script: |
-        pytest tests/unit
-      displayName: 'Run Unit tests'
+      - script: |
+          pytest tests/unit
+        displayName: 'Run Unit tests'
 
-    - script: |
-        echo "[{{cookiecutter.profile}}]" >> ~/.databrickscfg
-        echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
-        echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
-      env:
-        DATABRICKS_HOST: $(DATABRICKS_HOST)
-        DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
-      displayName: 'Prepare profile'
+      - script: |
+          echo "[{{cookiecutter.profile}}]" >> ~/.databrickscfg
+          echo "host = $DATABRICKS_HOST" >> ~/.databrickscfg
+          echo "token = $DATABRICKS_TOKEN" >> ~/.databrickscfg
+        env:
+          DATABRICKS_HOST: $(DATABRICKS_HOST)
+          DATABRICKS_TOKEN: $(DATABRICKS_TOKEN)
+        displayName: 'Prepare profile'
 
-    - script: |
-        dbx deploy --jobs={{cookiecutter.project_slug}}-sample-integration-test
-      displayName: 'Deploy integration test'
+      - script: |
+          dbx deploy --jobs={{cookiecutter.project_slug}}-sample-integration-test
+        displayName: 'Deploy integration test'
 
-    - script: |
-        dbx launch --jobs={{cookiecutter.project_slug}}-sample-integration-test --trace
-      displayName: 'Launch integration on test'
+      - script: |
+          dbx launch --job={{cookiecutter.project_slug}}-sample-integration-test --trace
+        displayName: 'Launch integration on test'
 
-    - script: |
-        dbx deploy --jobs={{cookiecutter.project_slug}}-sample
-      displayName: 'Deploy the job'
+      - script: |
+          dbx deploy --jobs={{cookiecutter.project_slug}}-sample
+        displayName: 'Deploy the job'
