--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -10,7 +10,7 @@ on:
       - "synchronize"
 
 jobs:
-  test-pipeline:
+  test-github-actions-azure:
 
     runs-on: ubuntu-latest
     strategy:
@@ -26,30 +26,16 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
-    - uses: actions/cache@v2
-      id: cache
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/unit-requirements.txt') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-          ${{ runner.os }}-pip-
-
     - name: Install pip
       run: |
         python -m pip install --upgrade pip
 
     - name: Install dependencies
       run: |
-        pip install -r requirements.txt
+        pip install cookiecutter path
 
-    - name: Install dbx and test
+    - name: Generate new project
       run: |
-        pip install {{cookiecutter.project_slug}}/tools/dbx-0.7.0-py3-none-any.whl
-        dbx --version
+        pwd
 
-    - name: Run tests
-      run: |
-        echo "Launching tests"
-        pytest tests
 
