--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -37,9 +37,9 @@ jobs:
     - name: Generate new project
       run: |
         mkdir -p /tmp/tests
-        echo "$GITHUB_SHA | cut -c1-8" >> $GITHUB_SHA_SHORT
-        echo "templates-test-$(GITHUB_SHA_SHORT)" >> $PROJECT_NAME
-        echo "/tmp/tests/$PROJECT_NAME" >> $FULL_PROJECT_PATH
+        echo "SHORT_COMMIT_ID=$GITHUB_SHA | cut -c1-8" >> $GITHUB_ENV
+        echo "PROJECT_NAME=templates-test-$SHORT_COMMIT_ID" >> $GITHUB_ENV
+        echo "FULL_PROJECT_PATH=/tmp/tests/$PROJECT_NAME" >> $GITHUB_ENV
         cookiecutter \
           --directory . \
           --no-input \
