--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -48,4 +48,7 @@ jobs:
           cloud="Azure" \
           profile=dbx-dev-azure \
           cicd_tool="GitHub Actions"
-        ls -la $FULL_PROJECT_PATH
+
+    - name: Install dbx
+      run: |
+        cd $FULL_PROJECT_PATH && pip install -U tools/dbx-0.7.0-py3-none-any.whl
