--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -14,6 +14,9 @@ jobs:
       matrix:
         python-version: [3.7]
 
+    env:
+      SHA8: ${GITHUB_SHA::8}
+
     steps:
     - uses: actions/checkout@v1
 
@@ -33,8 +36,7 @@ jobs:
     - name: Generate new project
       run: |
         mkdir -p /tmp/tests
-        echo "SHORT_COMMIT_ID=$($GITHUB_SHA | cut -c1-8)" >> $GITHUB_ENV
-        echo "PROJECT_NAME=templates-test-$SHORT_COMMIT_ID" >> $GITHUB_ENV
+        echo "PROJECT_NAME=templates-test-$SHA8" >> $GITHUB_ENV
         echo "FULL_PROJECT_PATH=/tmp/tests/$PROJECT_NAME" >> $GITHUB_ENV
         cookiecutter \
           --directory $(pwd) \
