--- a/.github/workflows/onpush.yml
+++ b/.github/workflows/onpush.yml
@@ -14,9 +14,6 @@ jobs:
       matrix:
         python-version: [3.7]
 
-    env:
-      SHA8: ${GITHUB_SHA::8}
-
     steps:
     - uses: actions/checkout@v1
 
@@ -36,6 +33,7 @@ jobs:
     - name: Generate new project
       run: |
         mkdir -p /tmp/tests
+        echo "SHA8=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_ENV
         echo "PROJECT_NAME=templates-test-$SHA8" >> $GITHUB_ENV
         echo "FULL_PROJECT_PATH=/tmp/tests/$PROJECT_NAME" >> $GITHUB_ENV
         cookiecutter \
